Payout wallet update
